[package]
name = "ollama-rs"
version.workspace = true
edition = "2021"
license-file = "../LICENSE.md"
description = "A Rust library for interacting with the Ollama API"
repository = "https://github.com/pepperoni21/ollama-rs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "function_call"
required-features = ["macros"]

[[example]]
name = "function_call_structured"
required-features = ["macros"]

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3.14.1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1.17", optional = true }
url = "2"
log = "0.4"
scraper = { version = "0.24.0", optional = true }
text-splitter = { version = "0.28.0", optional = true }
regex = { version = "1.11.2", optional = true }
async-stream = "0.3.5"
http = { version = "1.3.1", optional = true }
schemars = { version = "1.0.4", features = ["preserve_order"] }
thiserror = "2.0.16"
calc = { version = "0.4.0", optional = true }
html2md = { version = "0.2.15", optional = true }
static_assertions = "1.1.0"
modelfile = { version = "0.3.1", optional = true }

ollama-rs-macros = { workspace = true, optional = true }

[features]
default = ["reqwest/default-tls"]
stream = ["tokio-stream", "reqwest/stream", "tokio"]
rustls = ["reqwest/rustls-tls"]
headers = ["http"]
tool-implementations = ["scraper", "text-splitter", "regex", "calc", "html2md"]
macros = ["ollama-rs-macros"]
modelfile = ["dep:modelfile", "dep:serde_with"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
futures-util = "0.3"
ollama-rs = { path = ".", features = [
    "stream",
    "headers",
    "tool-implementations",
] }
base64 = "0.22.1"
fs2 = "0.4.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
